<resources>
    <string name="app_name">DAP</string>
    <string name="str_bienvenido">Bienvenido</string>
    <string name="str_cargando">Cargando...</string>
    <string name="str_poderes_gobierno">Poderes de Gobierno</string>
    <string name="str_dependencias_gobierno">Dependencias del Gobierno</string>
    <string name="str_buscar_por_nombre">Buscar por nombre o puesto</string>
    <string name="str_inicio">Inicio</string>
    <string name="str_acerca_de">Acerca de</string>
    <string name="str_buscar">Buscar</string>
    <string name="str_limpiar">Reestablecer</string>
    <string name="str_buscar_por_nombre_o_puesto">Buscar por nombre o puesto</string>
    <string name="str_fecha_alta">Fecha de alta</string>
    <string name="str_nivel">Nivel</string>

    <string name="api_poderes_gobierno">http://dap.sonora.gob.mx/api/v1/poderes</string>
    <string name="api_dependencias_gobierno">http://dap.sonora.gob.mx/api/v1/dependencias/</string>
    <string name="api_detalles_servidor_publico">https://next.json-generator.com/api/json/get/4JbRFdvRL/</string>
    <string name="api_lista_servidores">"http://dap.sonora.gob.mx/api/v1/servidores?</string>

    <string name="str_resena">Reseña</string>
    <string name="str_dependencia">Dependencia</string>
    <string name="str_unidad_administrativa">Unidad administrativa</string>
    <string name="str_puesto_funcional">Puesto funcional</string>
    <string name="str_salir">Salir</string>
    <string name="title_activity_home_tab">HomeTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="str_favoritos">Favoritos</string>
    <string name="str_domicilio">Domicilio</string>
    <string name="str_telefonos">Teléfonos</string>
    <string name="str_correo_electronico">Correo electrónico</string>
    <string name="str_compartir">Compartir</string>
    <string name="str_mapa">Mapa</string>
    <string name="enviar_correo_a">Enviar correo a:</string>
    <string name="llammar_a">Llamar a</string>
    <string name="title_activity_maps">Map</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="str_escribe_texto_buscar">Escribe un texto para buscar</string>
    <string name="str_busqueda_avanzada">Búsqueda avanzada</string>
    <string name="str_dap_long_name">Directorio de la \n Administración Pública Estatal</string>
    <string name="str_gobierno_del_estado_de_sonora">Gobierno del Estado de Sonora</string>
    <string name="str_ultimas_busquedas">Últimas búsquedas</string>
    <string name="title_activity_eliminar">EliminarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="str_desarrollado_por">Desarrollado por:</string>
    <string name="str_desarrollado_por_descripcion">Gobierno del Estado de Sonora | Secretaría de la Contraloría General
        | Subsecretaría de Desarrollo Administrativo y Técnologico
    </string>
    <string name="str_direccion_gob">Centro de Gobierno, Blvd. Paseo Río Sonora y Comonfort. C.P. 83280, Col. Villa de
        Seris. Hermosillo, Sonora, México.
    </string>
    <string name="str_telefono_gob">(662) 217 5198-93</string>
    <string name="str_correo_gob">tramites@sonora.gob.mx</string>
    <string name="title_activity_busqueda">BusquedaActivity</string>
    <string name="str_filtrar_en_lista">Filtrar en lista</string>
    <string name="str_version_android_no_compatible">La versión de android no es compatible con esta acción</string>
    <string name="str_sin_permisos_otorgados">No ha otorgado los permisos para realizar esta acción</string>
</resources>
