<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootContainer"
        tools:context=".HomeActivity">



    <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/str_poderes_gobierno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <Spinner
            android:gravity="top"
            android:id="@+id/spPoderesGobierno"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"></Spinner>

    <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/str_dependencias_gobierno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Spinner
            android:gravity="top"
            android:id="@+id/spDependenciasGobierno"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"></Spinner>

    <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/str_buscar_por_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text|textNoSuggestions"
            android:text=""
            android:hint="@string/str_buscar_por_nombre_o_puesto"
            android:ems="10"
            android:id="@+id/etFiltroNombrePuesto"/>

    <GridLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/str_buscar"
                android:layout_width="wrap_content"
                android:onClick="BuscarServidores"
                android:layout_height="wrap_content"/>

        <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/str_limpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </GridLayout>

</LinearLayout>